Wierd whitespace on right side temp fix.

--- a/Style/NFPL.scss
+++ b/Style/NFPL.scss
@@ -21,8 +21,12 @@ $NFPLDefaultText: 'Hind', sans-serif;
 
 
 
+html, body{
+    overflow-x: hidden; 
+}
 body{
     font-family: $NFPLDefaultText !important;
+    
 }
 
 .colour{
